--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div class="nav">
         <li>Home</li>
-        <li>About</li>
+            <li><a href="about/index.html">About</a></li>
         <li>Blog</li>
         <li>Contact</li>
      </div>
