--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="nav">
         <li>Home</li>
             <li><a href="about/index.html">About</a></li>
+            <li><a href="sat2022oct15/index.html">oct15</a></li>
         <li>Blog</li>
         <li>Contact</li>
      </div>
