--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
 <div class="hero">
-        <h2>October Project</h2>
+        <h2>LEARNING TO CODE</h2>
         <h2>HTML5 and CSS</h2>
         
 </div>
